--- a/requirements.txt
+++ b/requirements.txt
@@ -55,6 +55,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
 pyzmq==27.1.0
+RapidFuzz==3.14.1
 redis==6.4.0
 referencing==0.36.2
 requests==2.32.5
